--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,21 @@
 {
-  "name": "米奇發發發 USDT",
-  "short_name": "米奇USDT",
-  "start_url": "./",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0d6efd",
-  "icons": [
-    {
-      "src": "./icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ]
+    "name": "TRON USDT 管理面板",
+    "short_name": "TRON USDT",
+    "description": "TRON USDT 錢包管理和轉帳系統",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#007bff",
+    "icons": [
+        {
+            "src": "icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
